Bug 1250315 - Make <input type=number readonly> match :-moz-read-only and allow context events.  r=jwatt